# timebank

./: .containers-sugar.yaml  .pre-commit-config.yaml  .releaserc.json  PROPOSAL.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: main.yaml  release.yaml
conda/: lib.yaml  web.yaml
containers/: compose.yaml
containers/web/: Dockerfile
docs/: contributing.md  example.ipynb  index.md  installation.md  mkdocs.yaml
docs/api/: references.md  references.rst
src/timebank/: __init__.py  smart_contract.py
src/timebank-web/: .dockerignore  app.py  core.py  models.py  pyproject.toml  run.sh
src/timebank-web/migrations/: env.py
src/timebank-web/migrations/versions/: b62b013d2df2_initial_migration.py
src/timebank-web/templates/: base.html  index.html
src/timebank-web/templates/members/: form.html  list.html
src/timebank-web/templates/transactions/: form.html  list.html
tests/: __init__.py  test_timebank.py
