[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "timebank-web"
version = "0.1.0"
description = ""
authors = ["Ivan Ogasawara <ivan.ogasawara@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
uvicorn = "^0.24.0.post1"
py-algorand-sdk = "^2.5.0"
pyteal = "^0.25.0"
sqlalchemy = "^2.0.23"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"

